--- a/FontendPlatzi/index.html
+++ b/FontendPlatzi/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevBinary</title>
+    <title>Video Platzi</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <img src="./img/logo-platzi.png" alt="">
+    <header class="header">
+        <img class="header__img" src="./img/logo-platzi.png" alt="">
+        <div class="header__menu">
+            <div class="header__menu--profile">
+                <img src="./img/user-icon.png" alt="Ima">
+                <p>Perfil</p>
+            </div>
+            <ul>
+                <li><a href="#"></a>Cuenta</li>
+                <li><a href="#"></a>Cerrar Sesión</li>
+            </ul>
+        </div>
     </header>
 </body>
 </html>
