--- a/FontendPlatzi/index.html
+++ b/FontendPlatzi/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Video Platzi</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header class="header">
         <img class="header__img" src="./img/logo-platzi.png" alt="">
@@ -16,10 +21,11 @@
                 <p>Perfil</p>
             </div>
             <ul>
-                <li><a href="#"></a>Cuenta</li>
-                <li><a href="#"></a>Cerrar Sesión</li>
+                <li><a href="#">Cuenta</a></li>
+                <li><a href="#">Cerrar Sesión</a></li>
             </ul>
         </div>
     </header>
 </body>
+
 </html>
