--- a/FontendPlatzi/index.html
+++ b/FontendPlatzi/index.html
@@ -30,6 +30,16 @@
         <h2 class='main__title'>¿Qué quieres ver hoy?</h2>
         <input class='input' type="text" placeholder="Buscar...">
     </section>
+    <section class="carousel">
+        <div class="carousel__container">
+            <div class="carousel__item">
+                
+            </div>
+            <div class="carousel__item">
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
