--- a/FontendPlatzi/index.html
+++ b/FontendPlatzi/index.html
@@ -32,10 +32,18 @@
     </section>
     <section class="carousel">
         <div class="carousel__container">
-            <div class="carousel__item">
-                
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2017/08/06/07/19/people-2589818_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png"/>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png"/>
+                    </div>
+                </div>
+                <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
             </div>
-            <div class="carousel__item">
+            <div class="carousel-item">
 
             </div>
         </div>
