--- a/FontendPlatzi/index.html
+++ b/FontendPlatzi/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <header class="header">
-        <img class="header__img" src="./img/logo-platzi.png" alt="">
+        <img class="header__img" src="./img/logo-platzi.png" alt="logo platzi">
         <div class="header__menu">
             <div class="header__menu--profile">
                 <img src="./img/user-icon.png" alt="Ima">
                 <p>Perfil</p>
             </div>
             <ul>
-                <li><a href="#">Cuenta</a></li>
+                <li><a href="./login.html">Cuenta</a></li>
                 <li><a href="#">Cerrar Sesión</a></li>
             </ul>
         </div>
@@ -35,16 +35,80 @@
             <div class="carousel-item">
                 <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2017/08/06/07/19/people-2589818_960_720.jpg" alt="Imagen pareja">
                 <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
                     <div>
-                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png"/>
-                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png"/>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
                     </div>
                 </div>
-                <p class="carousel-item__details--title">Titulo Descriptivo</p>
-                <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
             </div>
             <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2018/01/28/13/24/portrait-3113651_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2015/03/26/09/41/tie-690084_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2015/04/20/17/38/couple-731890_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
+                    </div>
+                </div>
+            </div>
 
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2015/01/08/18/27/startup-593341_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2017/01/28/02/24/japan-2014619_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img" src="https://cdn.pixabay.com/photo/2017/12/31/19/45/girls-3053051_960_720.jpg" alt="Imagen pareja">
+                <div class="carousel-item__details">
+                    <p class="carousel-item__details--title">Titulo Descriptivo</p>
+                    <p class="carousel-item__details--subtitle">2019 +16 114 minutos</p>
+                    <div>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/play--v1.png" alt="Play">
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png" alt="Plus">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
