Terminando pagina de login

--- a/FontendPlatzi/login.html
+++ b/FontendPlatzi/login.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__img" src="./img/logo-platzi.png" alt="Logo video">
+        <a href="index.html"><img class="header__img" src="./img/logo-platzi.png" alt="Logo video"></a>
     </header>
     <section class="login">
         <section class="login__container">
             <h2>Inicia sesion</h2>
             <form class="login__container--form">
                 <input type="text" class="input" placeholder='Correo'>
-                <input type="password" placeholder="Contraseña">
+                <input type="password" class="input" placeholder="Contraseña">
                 <button class="button">Inicia Sesión</button>
                 <div class="login__container--remember-me">
                     <label for="">
