--- a/FontendPlatzi/index.html
+++ b/FontendPlatzi/index.html
@@ -21,8 +21,8 @@
                 <p>Perfil</p>
             </div>
             <ul>
-                <li><a href="./login.html">Cuenta</a></li>
-                <li><a href="#">Cerrar Sesión</a></li>
+                <li><a href="./login.html">Ingresar</a></li>
+                <li><a href="./crearCuenta.html">Crear Cuenta</a></li>
             </ul>
         </div>
     </header>
